--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>RiotJS and Webpack Setup Demo</title>
-  </head>
-  <body>
-    <simple-board></simple-board>
-    <script src="bundle.js" charset="utf-8"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>RiotJS and Webpack Setup Demo</title>
+  <link href="http://fonts.googleapis.com/css?family=Reenie+Beanie:regular" rel="stylesheet" type="text/css">
+  <style type="text/css">
+    * {
+      margin: 0;
+      padding: 0;
+    }
+    
+    body {
+      font-family: arial, sans-serif;
+      font-size: 100%;
+      margin: 3em;
+      background: #666;
+      color: #fff;
+    }
+  </style>
+</head>
+
+<body>
+  <simple-board></simple-board>
+  <script src="bundle.js" charset="utf-8"></script>
+</body>
+
 </html>
