UPdated name of bundle

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       font-family: arial, sans-serif;
       font-size: 100%;
       margin: 3em;
-      background: #666;
+      background: #fff;
       color: #fff;
     }
   </style>
@@ -23,7 +23,7 @@
 
 <body>
   <simple-board></simple-board>
-  <script src="bundle.js" charset="utf-8"></script>
+  <script src="simpleboard.js" charset="utf-8"></script>
 </body>
 
 </html>
