Center loading and some more small stuff

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>RiotJS and Webpack Setup Demo</title>
+  <title>Simple Board - a demo page</title>
   <link href="http://fonts.googleapis.com/css?family=Reenie+Beanie:regular" rel="stylesheet" type="text/css">
   <style type="text/css">
     * {
