--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Simple Board - a demo page</title>
-  <link href="http://fonts.googleapis.com/css?family=Reenie+Beanie:regular" rel="stylesheet" type="text/css">
+
+  <!--This really should be in the work-item.tag -->
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
   <style type="text/css">
     * {
       margin: 0;
@@ -25,5 +29,4 @@
   <simple-board></simple-board>
   <script src="simpleboard.js" charset="utf-8"></script>
 </body>
-
 </html>
